--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "flowbite": "^1.6.5",
         "jquery": "^3.7.0",
         "laravel-mix-blade-reload": "^3.0.0",
+        "num2persian": "^3.2.2",
         "postcss-import": "^15.1.0",
         "select2": "^4.1.0-rc.0",
         "sweetalert2": "^11.7.3"
